// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fallback to initials 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 50,
      },
      Object {
        "backgroundColor": "hsl(-216, 75%, 50%)",
      },
      undefined,
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#ffffff",
          "fontFamily": "System",
          "fontSize": 20,
          "fontWeight": "700",
          "includeFontPadding": false,
          "lineHeight": 25,
          "textAlignVertical": "center",
        },
        undefined,
      ]
    }
  >
    UN
  </Text>
</View>
`;

exports[`should not render 1`] = `null`;

exports[`should render default image if empty name 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 50,
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "default.png",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render default image if no gravatar 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 50,
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "default.png",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render default image if no image 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 50,
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "default.png",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render gravatar 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 50,
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "https://www.gravatar.com/avatar/b58c6f14d292556214bd64909bcdb118?s=100&d=404",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render image 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 50,
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "image.png",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render image as square 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 0,
        "height": 50,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 50,
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "image.png",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render initials 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 50,
      },
      Object {
        "backgroundColor": "hsl(-216, 75%, 50%)",
      },
      undefined,
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#ffffff",
          "fontFamily": "System",
          "fontSize": 20,
          "fontWeight": "700",
          "includeFontPadding": false,
          "lineHeight": 25,
          "textAlignVertical": "center",
        },
        undefined,
      ]
    }
  >
    UN
  </Text>
</View>
`;
